started error handling
