# docs/swagger.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Users API",
+    "title": "Achievements API",
     "description": "This API allows the client to create, read, update, and delete Users of the Gamified Goal-setting Achievements Application.",
     "version": "1.0.0"
   },
@@ -13,7 +13,7 @@
   "paths": {
     "/user/": {
       "get": {
-        "description": "Returns all of the user records contained in the database",
+        "description": "",
         "produces": [
           "application/json"
         ],
@@ -21,11 +21,14 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       },
       "post": {
-        "description": "creates a new User record and saves it to the database. The body of the request contains a username, email, password hash for authentication, and other data for the User to utilize in goal setting.",
+        "description": "",
         "parameters": [
           {
             "name": "body",
@@ -34,7 +37,7 @@
               "type": "object",
               "properties": {
                 "userName": {
-                  "example": "String"
+                  "example": "any"
                 },
                 "email": {
                   "example": "any"
@@ -43,13 +46,13 @@
                   "example": "any"
                 },
                 "bio": {
-                  "example": "String"
+                  "example": "any"
                 },
                 "achievements": {
-                  "example": "List"
+                  "example": "any"
                 },
                 "points": {
-                  "example": "Int"
+                  "example": "any"
                 },
                 "createdDate": {
                   "example": "any"
@@ -70,7 +73,147 @@
     },
     "/user/{id}": {
       "get": {
-        "description": "returns a specific User based on the provided ID.",
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userName": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "pass": {
+                  "example": "any"
+                },
+                "bio": {
+                  "example": "any"
+                },
+                "achievements": {
+                  "example": "any"
+                },
+                "points": {
+                  "example": "any"
+                },
+                "createdDate": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/achievements/": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "taskName": {
+                  "example": "any"
+                },
+                "points": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/achievements/{id}": {
+      "get": {
+        "description": "",
         "produces": [
           "application/json"
         ],
@@ -89,7 +232,7 @@
         }
       },
       "put": {
-        "description": "Update the User related to the given ID with new data.",
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -103,25 +246,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "userName": {
-                  "example": "String"
-                },
-                "email": {
+                "taskName": {
                   "example": "any"
-                },
-                "pass": {
-                  "example": "any"
-                },
-                "bio": {
-                  "example": "String"
-                },
-                "achievements": {
-                  "example": "List"
                 },
                 "points": {
-                  "example": "Int"
-                },
-                "createdDate": {
                   "example": "any"
                 }
               }
@@ -138,7 +266,7 @@
         }
       },
       "delete": {
-        "description": "Deletes the User related to the provided ID.",
+        "description": "",
         "parameters": [
           {
             "name": "id",
